Internal data
* BfdSessionData
* BFD descriptor
* effective properties
* action

Internal signals
* action-success
* action-fail
* ready

Input signals
* online
* offline
* port-up
* port-down
* enable (ISL-FSM)
* disable (ISL-FSM)
* speaker-response

Output signals
* bfd-up
* bfd-down
* bfd-fail
* bfd-kill

@startuml bfd-port-FSM
title BFD session FSM

[*] --> ENTER
note right of ENTER
    The system must receive one of the events
    that lead out of this state right after FSM was
    created. i.e. FSM must not stay in this state.
end note

ENTER : enter / load existing session
ENTER : enter / load existing properties
ENTER --> PREPARE : enable
ENTER --> REMOVING : disable

PREPARE : enter / reset effective properties
PREPARE : enter / allocate(lock) BFD-discriminator
PREPARE : enter / [isOnline] make BFD-setup action and fire ready
PREPARE --> CREATING : ready
PREPARE --> HOUSEKEEPING : disable
PREPARE --> ERROR : error
PREPARE : online / make BFD-setup action and fire ready

CREATING : enter / clean port status transitions
CREATING --> ACTIVE : action-success
CREATING --> ERROR : action-fail
CREATING --> REMOVING : disable

ACTIVE : enter / save properties into DB
state ACTIVE {
    [*] --> WAIT_STATUS

    WAIT_STATUS : enter / pull port status transition
    WAIT_STATUS --> UP : port-up
    WAIT_STATUS --> DOWN : port-down

    UP -r-> DOWN : port-down
    UP : enter / emit bfd-up

    DOWN -l-> UP : port-up
    DOWN : enter / emit bfd-down
}
ACTIVE --> REMOVING : disable
ACTIVE --> OFFLINE : offline
ACTIVE : exit / emit bfd-kill

OFFLINE : enter / clean port status transitions
OFFLINE --> ACTIVE : online
OFFLINE --> REMOVING : disable

REMOVING : enter / [isOnline] make BFD-remove action
REMOVING --> HOUSEKEEPING : action-success
REMOVING : action-fail / emit bfd-fail
REMOVING : online / make BFD-remove action
REMOVING : disable / [isOnline] make BFD-remove action

ERROR : enter / emit bfd-fail
ERROR --> HOUSEKEEPING : next

HOUSEKEEPING : enter / [discriminator != null] release BFD-descriptor
HOUSEKEEPING --> [*] : next

@enduml
